@@ -12,6 +12,7 @@ X   X
     * Nerf Boots + Punch = hover jump, now jumps 0.7 instead of 1.0 by default
     * Add configurable range and duration to Bow + Aqua Affinity = freeze
     * Add configurable range and duration to Bow + Bane of Arthropods = poison
+    * Improve Bow + Efficiency = instant shoot, now cannot pickup the shot arrows
     * Fix Sword + Infinity, now damages item on use
 
 2012-03-13  0.8.2
